--- a/rescale.ipynb
+++ b/rescale.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "4  1036.473684  3257.157895  1220.684211  3467.684211  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,12 +175,14 @@
     "    img = cv.imread(path)\n",
     "    # convert to grayscale \n",
     "    gray_scale_img = cv.cvtColor(img, cv.COLOR_BGR2GRAY)\n",
-    "    return gray_scale_img"
+    "    blur = cv.GuassianBlur(gray_scale_img, (5,5), 0)\n",
+    "    ret, threshold = cv.threshold(blur, 0, 255, cv.THRESH_BINARY+cv.THRESH_OTSU)\n",
+    "    return threshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,564 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "183786.png\n",
-      "183844.png\n",
-      "183845.png\n",
-      "183846.png\n",
-      "183847.png\n",
-      "183855.png\n",
-      "183862.png\n",
-      "183867.png\n",
-      "183868.png\n",
-      "183869.png\n",
-      "Progress: 2.0%\n",
-      "183874.png\n",
-      "183876.png\n",
-      "183878.png\n",
-      "183881.png\n",
-      "183919.png\n",
-      "183942.png\n",
-      "183943.png\n",
-      "183971.png\n",
-      "184010.png\n",
-      "184011.png\n",
-      "Progress: 3.99%\n",
-      "184012.png\n",
-      "184015.png\n",
-      "184018.png\n",
-      "184064.png\n",
-      "184065.png\n",
-      "184067.png\n",
-      "184068.png\n",
-      "184076.png\n",
-      "184078.png\n",
-      "184101.png\n",
-      "Progress: 5.99%\n",
-      "184102.png\n",
-      "184104.png\n",
-      "184105.png\n",
-      "184127.png\n",
-      "184130.png\n",
-      "184145.png\n",
-      "184146.png\n",
-      "184148.png\n",
-      "184156.png\n",
-      "184157.png\n",
-      "Progress: 7.98%\n",
-      "184159.png\n",
-      "184251.png\n",
-      "184252.png\n",
-      "184253.png\n",
-      "184255.png\n",
-      "184257.png\n",
-      "184258.png\n",
-      "184259.png\n",
-      "184260.png\n",
-      "184261.png\n",
-      "Progress: 9.98%\n",
-      "184262.png\n",
-      "184263.png\n",
-      "184266.png\n",
-      "184267.png\n",
-      "184269.png\n",
-      "184270.png\n",
-      "184283.png\n",
-      "184284.png\n",
-      "184293.png\n",
-      "184294.png\n",
-      "Progress: 11.98%\n",
-      "184296.png\n",
-      "184298.png\n",
-      "184301.png\n",
-      "184305.png\n",
-      "184307.png\n",
-      "184310.png\n",
-      "184322.png\n",
-      "184328.png\n",
-      "184331.png\n",
-      "184332.png\n",
-      "Progress: 13.97%\n",
-      "184334.png\n",
-      "184335.png\n",
-      "184337.png\n",
-      "184338.png\n",
-      "184400.png\n",
-      "184404.png\n",
-      "184406.png\n",
-      "184407.png\n",
-      "184409.png\n",
-      "184410.png\n",
-      "Progress: 15.97%\n",
-      "184411.png\n",
-      "184412.png\n",
-      "184413.png\n",
-      "184414.png\n",
-      "184415.png\n",
-      "184416.png\n",
-      "184423.png\n",
-      "184425.png\n",
-      "184426.png\n",
-      "184427.png\n",
-      "Progress: 17.96%\n",
-      "184429.png\n",
-      "184430.png\n",
-      "184431.png\n",
-      "184542.png\n",
-      "184545.png\n",
-      "184547.png\n",
-      "184549.png\n",
-      "184550.png\n",
-      "184554.png\n",
-      "184578.png\n",
-      "Progress: 19.96%\n",
-      "184579.png\n",
-      "184585.png\n",
-      "184586.png\n",
-      "184597.png\n",
-      "184600.png\n",
-      "184965.png\n",
-      "184969.png\n",
-      "184970.png\n",
-      "184975.png\n",
-      "185010.png\n",
-      "Progress: 21.96%\n",
-      "185011.png\n",
-      "185017.png\n",
-      "185019.png\n",
-      "185020.png\n",
-      "185022.png\n",
-      "185079.png\n",
-      "185080.png\n",
-      "185081.png\n",
-      "185082.png\n",
-      "185084.png\n",
-      "Progress: 23.95%\n",
-      "185093.png\n",
-      "185096.png\n",
-      "185097.png\n",
-      "185099.png\n",
-      "186510.png\n",
-      "186512.png\n",
-      "186515.png\n",
-      "186519.png\n",
-      "186523.png\n",
-      "186524.png\n",
-      "Progress: 25.95%\n",
-      "186525.png\n",
-      "186526.png\n",
-      "186528.png\n",
-      "186535.png\n",
-      "186537.png\n",
-      "186538.png\n",
-      "186542.png\n",
-      "186543.png\n",
-      "186545.png\n",
-      "186546.png\n",
-      "Progress: 27.94%\n",
-      "186548.png\n",
-      "186550.png\n",
-      "186553.png\n",
-      "186689.png\n",
-      "186690.png\n",
-      "186691.png\n",
-      "186692.png\n",
-      "186694.png\n",
-      "186696.png\n",
-      "186699.png\n",
-      "Progress: 29.94%\n",
-      "186700.png\n",
-      "186701.png\n",
-      "186714.png\n",
-      "186717.png\n",
-      "186729.png\n",
-      "186738.png\n",
-      "186739.png\n",
-      "186743.png\n",
-      "186751.png\n",
-      "186752.png\n",
-      "Progress: 31.94%\n",
-      "186755.png\n",
-      "186756.png\n",
-      "186758.png\n",
-      "186760.png\n",
-      "186762.png\n",
-      "186786.png\n",
-      "186830.png\n",
-      "186837.png\n",
-      "186845.png\n",
-      "186847.png\n",
-      "Progress: 33.93%\n",
-      "187171.png\n",
-      "187490.png\n",
-      "187491.png\n",
-      "187492.png\n",
-      "187548.png\n",
-      "187549.png\n",
-      "187555.png\n",
-      "187556.png\n",
-      "187570.png\n",
-      "187582.png\n",
-      "Progress: 35.93%\n",
-      "187599.png\n",
-      "187602.png\n",
-      "188845.png\n",
-      "188847.png\n",
-      "188851.png\n",
-      "188861.png\n",
-      "188865.png\n",
-      "188867.png\n",
-      "188869.png\n",
-      "188875.png\n",
-      "Progress: 37.92%\n",
-      "188880.png\n",
-      "188893.png\n",
-      "188894.png\n",
-      "188895.png\n",
-      "188910.png\n",
-      "188929.png\n",
-      "188941.png\n",
-      "188948.png\n",
-      "188952.png\n",
-      "188954.png\n",
-      "Progress: 39.92%\n",
-      "188956.png\n",
-      "188957.png\n",
-      "188987.png\n",
-      "188990.png\n",
-      "188994.png\n",
-      "188995.png\n",
-      "188996.png\n",
-      "188998.png\n",
-      "188999.png\n",
-      "189009.png\n",
-      "Progress: 41.92%\n",
-      "189056.png\n",
-      "189065.png\n",
-      "189152.png\n",
-      "189155.png\n",
-      "189158.png\n",
-      "189239.png\n",
-      "189246.png\n",
-      "189263.png\n",
-      "189265.png\n",
-      "189269.png\n",
-      "Progress: 43.91%\n",
-      "189279.png\n",
-      "189287.png\n",
-      "189290.png\n",
-      "189294.png\n",
-      "189830.png\n",
-      "189834.png\n",
-      "189852.png\n",
-      "190042.png\n",
-      "190064.png\n",
-      "190109.png\n",
-      "Progress: 45.91%\n",
-      "190115.png\n",
-      "190116.png\n",
-      "190119.png\n",
-      "190120.png\n",
-      "190828.png\n",
-      "190832.png\n",
-      "190867.png\n",
-      "190880.png\n",
-      "190884.png\n",
-      "191013.png\n",
-      "Progress: 47.9%\n",
-      "191017.png\n",
-      "191036.png\n",
-      "191214.png\n",
-      "191232.png\n",
-      "191235.png\n",
-      "192138.png\n",
-      "192141.png\n",
-      "192142.png\n",
-      "192143.png\n",
-      "192145.png\n",
-      "Progress: 49.9%\n",
-      "192148.png\n",
-      "192150.png\n",
-      "192153.png\n",
-      "192160.png\n",
-      "192162.png\n",
-      "192168.png\n",
-      "192170.png\n",
-      "192172.png\n",
-      "192173.png\n",
-      "192183.png\n",
-      "Progress: 51.9%\n",
-      "192185.png\n",
-      "192187.png\n",
-      "192189.png\n",
-      "192190.png\n",
-      "192195.png\n",
-      "192198.png\n",
-      "192199.png\n",
-      "192202.png\n",
-      "192203.png\n",
-      "192205.png\n",
-      "Progress: 53.89%\n",
-      "192207.png\n",
-      "192208.png\n",
-      "192212.png\n",
-      "192213.png\n",
-      "192216.png\n",
-      "192217.png\n",
-      "192218.png\n",
-      "192223.png\n",
-      "192224.png\n",
-      "192225.png\n",
-      "Progress: 55.89%\n",
-      "192230.png\n",
-      "192233.png\n",
-      "192234.png\n",
-      "192236.png\n",
-      "192240.png\n",
-      "192242.png\n",
-      "192297.png\n",
-      "192299.png\n",
-      "192300.png\n",
-      "192318.png\n",
-      "Progress: 57.88%\n",
-      "192366.png\n",
-      "192368.png\n",
-      "192383.png\n",
-      "192385.png\n",
-      "192392.png\n",
-      "192394.png\n",
-      "192395.png\n",
-      "192397.png\n",
-      "192797.png\n",
-      "193170.png\n",
-      "Progress: 59.88%\n",
-      "193171.png\n",
-      "193173.png\n",
-      "193179.png\n",
-      "193180.png\n",
-      "193181.png\n",
-      "193183.png\n",
-      "193187.png\n",
-      "193188.png\n",
-      "193189.png\n",
-      "193190.png\n",
-      "Progress: 61.88%\n",
-      "193197.png\n",
-      "193198.png\n",
-      "193199.png\n",
-      "193200.png\n",
-      "193202.png\n",
-      "193204.png\n",
-      "193234.png\n",
-      "193242.png\n",
-      "193244.png\n",
-      "193246.png\n",
-      "Progress: 63.87%\n",
-      "193247.png\n",
-      "193249.png\n",
-      "193250.png\n",
-      "193251.png\n",
-      "193252.png\n",
-      "193271.png\n",
-      "193272.png\n",
-      "193274.png\n",
-      "193288.png\n",
-      "193294.png\n",
-      "Progress: 65.87%\n",
-      "193969.png\n",
-      "193975.png\n",
-      "193977.png\n",
-      "193979.png\n",
-      "193981.png\n",
-      "193985.png\n",
-      "193987.png\n",
-      "193995.png\n",
-      "193998.png\n",
-      "194002.png\n",
-      "Progress: 67.86%\n",
-      "194005.png\n",
-      "194006.png\n",
-      "194009.png\n",
-      "194016.png\n",
-      "194017.png\n",
-      "194018.png\n",
-      "194023.png\n",
-      "194024.png\n",
-      "194027.png\n",
-      "194028.png\n",
-      "Progress: 69.86%\n",
-      "194029.png\n",
-      "194031.png\n",
-      "194032.png\n",
-      "194033.png\n",
-      "194034.png\n",
-      "194059.png\n",
-      "194072.png\n",
-      "194075.png\n",
-      "194076.png\n",
-      "194079.png\n",
-      "Progress: 71.86%\n",
-      "194110.png\n",
-      "194150.png\n",
-      "194154.png\n",
-      "194174.png\n",
-      "194178.png\n",
-      "194182.png\n",
-      "194188.png\n",
-      "194191.png\n",
-      "194192.png\n",
-      "194194.png\n",
-      "Progress: 73.85%\n",
-      "194200.png\n",
-      "194213.png\n",
-      "194214.png\n",
-      "194216.png\n",
-      "194219.png\n",
-      "194220.png\n",
-      "194222.png\n",
-      "194223.png\n",
-      "194225.png\n",
-      "194228.png\n",
-      "Progress: 75.85%\n",
-      "194230.png\n",
-      "194235.png\n",
-      "194239.png\n",
-      "194249.png\n",
-      "194252.png\n",
-      "194254.png\n",
-      "194265.png\n",
-      "194270.png\n",
-      "194275.png\n",
-      "194277.png\n",
-      "Progress: 77.84%\n",
-      "194289.png\n",
-      "194293.png\n",
-      "194294.png\n",
-      "194295.png\n",
-      "194297.png\n",
-      "194298.png\n",
-      "194299.png\n",
-      "194300.png\n",
-      "194304.png\n",
-      "194306.png\n",
-      "Progress: 79.84%\n",
-      "194307.png\n",
-      "194310.png\n",
-      "194311.png\n",
-      "194330.png\n",
-      "194331.png\n",
-      "194346.png\n",
-      "194347.png\n",
-      "194354.png\n",
-      "194359.png\n",
-      "194385.png\n",
-      "Progress: 81.84%\n",
-      "194386.png\n",
-      "194387.png\n",
-      "194395.png\n",
-      "194398.png\n",
-      "194399.png\n",
-      "194401.png\n",
-      "194402.png\n",
-      "194403.png\n",
-      "194404.png\n",
-      "194417.png\n",
-      "Progress: 83.83%\n",
-      "194418.png\n",
-      "194423.png\n",
-      "194424.png\n",
-      "194429.png\n",
-      "194440.png\n",
-      "194441.png\n",
-      "194443.png\n",
-      "194496.png\n",
-      "194497.png\n",
-      "194498.png\n",
-      "Progress: 85.83%\n",
-      "194499.png\n",
-      "194500.png\n",
-      "194503.png\n",
-      "194504.png\n",
-      "194505.png\n",
-      "194506.png\n",
-      "194509.png\n",
-      "194527.png\n",
-      "194531.png\n",
-      "194534.png\n",
-      "Progress: 87.82%\n",
-      "194536.png\n",
-      "194537.png\n",
-      "194538.png\n",
-      "194581.png\n",
-      "194583.png\n",
-      "194591.png\n",
-      "194597.png\n",
-      "194603.png\n",
-      "194606.png\n",
-      "194613.png\n",
-      "Progress: 89.82%\n",
-      "194630.png\n",
-      "194631.png\n",
-      "194633.png\n",
-      "194635.png\n",
-      "194642.png\n",
-      "194643.png\n",
-      "194644.png\n",
-      "194645.png\n",
-      "194656.png\n",
-      "194658.png\n",
-      "Progress: 91.82%\n",
-      "194670.png\n",
-      "194673.png\n",
-      "194674.png\n",
-      "194676.png\n",
-      "194680.png\n",
-      "194682.png\n",
-      "194687.png\n",
-      "194693.png\n",
-      "194694.png\n",
-      "194695.png\n",
-      "Progress: 93.81%\n",
-      "194698.png\n",
-      "194700.png\n",
-      "194701.png\n",
-      "194702.png\n",
-      "194707.png\n",
-      "194708.png\n",
-      "194713.png\n",
-      "194714.png\n",
-      "194715.png\n",
-      "195316.png\n",
-      "Progress: 95.81%\n",
-      "195320.png\n",
-      "195322.png\n",
-      "195323.png\n",
-      "195324.png\n",
-      "195330.png\n",
-      "195331.png\n",
-      "195332.png\n",
-      "195334.png\n",
-      "195335.png\n",
-      "212594.png\n",
-      "Progress: 97.8%\n",
-      "213231.png\n",
-      "213234.png\n",
-      "241140.png\n",
-      "241455.png\n",
-      "242653.png\n",
-      "242685.png\n",
-      "358918.png\n",
-      "368684.png\n",
-      "379718.png\n",
-      "382968.png\n",
-      "Progress: 99.8%\n",
-      "476324.png\n"
+     "ename": "AttributeError",
+     "evalue": "module 'cv2' has no attribute 'GuassianBlur'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [11], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m counter \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m image_list:\n\u001b[1;32m----> 9\u001b[0m     black_white \u001b[39m=\u001b[39m png_to_np(image_path \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m img)\n\u001b[0;32m     10\u001b[0m     old_size \u001b[39m=\u001b[39m black_white\u001b[39m.\u001b[39mshape\n\u001b[0;32m     11\u001b[0m     \u001b[39m#print(old_size)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [9], line 10\u001b[0m, in \u001b[0;36mpng_to_np\u001b[1;34m(path)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[39m# convert to grayscale \u001b[39;00m\n\u001b[0;32m      9\u001b[0m gray_scale_img \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mcvtColor(img, cv\u001b[39m.\u001b[39mCOLOR_BGR2GRAY)\n\u001b[1;32m---> 10\u001b[0m blur \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39;49mGuassianBlur(gray_scale_img, (\u001b[39m5\u001b[39m,\u001b[39m5\u001b[39m), \u001b[39m0\u001b[39m)\n\u001b[0;32m     11\u001b[0m ret, threshold \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mthreshold(blur, \u001b[39m0\u001b[39m, \u001b[39m255\u001b[39m, cv\u001b[39m.\u001b[39mTHRESH_BINARY\u001b[39m+\u001b[39mcv\u001b[39m.\u001b[39mTHRESH_OTSU)\n\u001b[0;32m     12\u001b[0m \u001b[39mreturn\u001b[39;00m threshold\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'cv2' has no attribute 'GuassianBlur'"
      ]
     }
    ],
@@ -779,7 +236,7 @@
     "    rows[\"xmax_scaled\"] = rows[\"xmax\"].apply(lambda x: x*ratio_x)\n",
     "    rows[\"ymin_scaled\"] = rows[\"ymin\"].apply(lambda x: x*ratio_y)\n",
     "    rows[\"ymax_scaled\"] = rows[\"ymax\"].apply(lambda x: x*ratio_y)\n",
-    "    new_df = pd.concat([new_df, rows])\n",
+    "    new_df = pd.concat([new_df, rows[[\"number\", \"xmin_scaled\", \"xmax_scaled\", \"ymin_scaled\", \"ymax_scaled\"]]])\n",
     "    #print(new_df.loc[df['number'] == int(img[:-4])])\n",
     "    down_scaled = down_scale_img(black_white)\n",
     "    im = Image.fromarray(down_scaled)\n",
@@ -795,40 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      number                                           jsonname  \\\n",
-      "1510  183786  /Users/imchengliang/Downloads/DS-Project/json-...   \n",
-      "1511  183786  /Users/imchengliang/Downloads/DS-Project/json-...   \n",
-      "1512  183786  /Users/imchengliang/Downloads/DS-Project/json-...   \n",
-      "726   183844  /Users/imchengliang/Downloads/DS-Project/json-...   \n",
-      "442   183845  /Users/imchengliang/Downloads/DS-Project/json-...   \n",
-      "\n",
-      "                                              photoname  width  height class  \\\n",
-      "1510  /Users/imchengliang/Downloads/DS-Project/photo...   2272    3574     m   \n",
-      "1511  /Users/imchengliang/Downloads/DS-Project/photo...   2272    3574     m   \n",
-      "1512  /Users/imchengliang/Downloads/DS-Project/photo...   2272    3574     m   \n",
-      "726   /Users/imchengliang/Downloads/DS-Project/photo...   3424    4740     m   \n",
-      "442   /Users/imchengliang/Downloads/DS-Project/photo...   3352    4693     m   \n",
-      "\n",
-      "             xmin         ymin         xmax         ymax  xmin_scaled  \\\n",
-      "1510     4.000000   130.000000   141.500000   412.500000     0.880282   \n",
-      "1511   979.000000   610.000000  1044.000000   715.000000   215.448944   \n",
-      "1512   314.000000  2877.500000  1994.000000  3180.000000    69.102113   \n",
-      "726    980.000000  2110.000000  1150.000000  2350.000000   143.107477   \n",
-      "442   2102.258065  3125.806452  2786.129032  3722.580645   313.582647   \n",
-      "\n",
-      "      xmax_scaled  ymin_scaled  ymax_scaled  \n",
-      "1510    31.139965    12.730834    40.395915  \n",
-      "1511   229.753521    59.736989    70.019586  \n",
-      "1512   438.820423   281.792110   311.415781  \n",
-      "726    167.932243   155.801688   173.523207  \n",
-      "442    415.592039   233.120021   277.626939  \n"
+      "      number  xmin_scaled  xmax_scaled  ymin_scaled  ymax_scaled\n",
+      "1510  183786     0.880282    31.139965    12.730834    40.395915\n",
+      "1511  183786   215.448944   229.753521    59.736989    70.019586\n",
+      "1512  183786    69.102113   438.820423   281.792110   311.415781\n",
+      "726   183844   143.107477   167.932243   155.801688   173.523207\n",
+      "442   183845   313.582647   415.592039   233.120021   277.626939\n"
      ]
     }
    ],
@@ -838,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
