minor changes in evaluation.ipynb

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -401,59 +401,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate Prediction\n",
+    "def evaluate_visualize_results():\n",
+    "    boxes = pd.read_csv(\"rescaled_data.csv\")\n",
+    "    boxes = boxes[[\"number\", \"xmin_scaled\", \"ymin_scaled\", \"xmax_scaled\", \"ymax_scaled\"]]\n",
+    "    iou_list = []\n",
+    "\n",
+    "    for result in results:\n",
+    "        id = result[0]\n",
+    "        # predicted boxes\n",
+    "        predicted_boxes = result[1]\n",
+    "        # target boxes\n",
+    "        sub_df = boxes[boxes[\"number\"] == int(id)]\n",
+    "        num_boxes = len(sub_df)\n",
+    "        box_coordinates = []\n",
+    "        for i in range(num_boxes):\n",
+    "            sub_sub_df = sub_df.iloc[i]\n",
+    "            xmin_scaled = int(sub_sub_df[\"xmin_scaled\"])\n",
+    "            ymin_scaled = int(sub_sub_df[\"ymin_scaled\"])\n",
+    "            xmax_scaled = int(sub_sub_df[\"xmax_scaled\"])\n",
+    "            ymax_scaled = int(sub_sub_df[\"ymax_scaled\"])\n",
+    "            box_coordinates.append(torch.tensor([xmin_scaled, ymin_scaled, xmax_scaled, ymax_scaled], dtype=torch.int32))\n",
+    "        if num_boxes > 1:\n",
+    "                target_boxes = torch.stack(box_coordinates, axis=0)\n",
+    "        elif num_boxes == 1:\n",
+    "            box_coordinates = box_coordinates[0]\n",
+    "            target_boxes = box_coordinates.view(1,4)\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "        # evaluate predicted_boxes vs target_boxes\n",
+    "        idxs_true, idxs_pred, ious, labels = match_bboxes(predicted_boxes, target_boxes)\n",
+    "        iou_mean = ious.mean()\n",
+    "        iou_list.append(iou_mean)\n",
+    "\n",
+    "        # visualize predicted boxes and target boxes\n",
+    "        visualize_prediction_and_target(id, target_boxes, predicted_boxes)\n",
+    "\n",
+    "    # calculate iou accross all results\n",
+    "    iou = sum(iou_list) / len(iou_list)\n",
+    "    return iou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.900658767024676\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.900658767024676"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Evaluate Prediction\n",
-    "\n",
-    "boxes = pd.read_csv(\"rescaled_data.csv\")\n",
-    "boxes = boxes[[\"number\", \"xmin_scaled\", \"ymin_scaled\", \"xmax_scaled\", \"ymax_scaled\"]]\n",
-    "iou_list = []\n",
-    "\n",
-    "for result in results:\n",
-    "    id = result[0]\n",
-    "    # predicted boxes\n",
-    "    predicted_boxes = result[1]\n",
-    "    # target boxes\n",
-    "    sub_df = boxes[boxes[\"number\"] == int(id)]\n",
-    "    num_boxes = len(sub_df)\n",
-    "    box_coordinates = []\n",
-    "    for i in range(num_boxes):\n",
-    "        sub_sub_df = sub_df.iloc[i]\n",
-    "        xmin_scaled = int(sub_sub_df[\"xmin_scaled\"])\n",
-    "        ymin_scaled = int(sub_sub_df[\"ymin_scaled\"])\n",
-    "        xmax_scaled = int(sub_sub_df[\"xmax_scaled\"])\n",
-    "        ymax_scaled = int(sub_sub_df[\"ymax_scaled\"])\n",
-    "        box_coordinates.append(torch.tensor([xmin_scaled, ymin_scaled, xmax_scaled, ymax_scaled], dtype=torch.int32))\n",
-    "    if num_boxes > 1:\n",
-    "            target_boxes = torch.stack(box_coordinates, axis=0)\n",
-    "    elif num_boxes == 1:\n",
-    "        box_coordinates = box_coordinates[0]\n",
-    "        target_boxes = box_coordinates.view(1,4)\n",
-    "    else:\n",
-    "        pass\n",
-    "\n",
-    "    # evaluate predicted_boxes vs target_boxes\n",
-    "    idxs_true, idxs_pred, ious, labels = match_bboxes(predicted_boxes, target_boxes)\n",
-    "    iou_mean = ious.mean()\n",
-    "    iou_list.append(iou_mean)\n",
-    "\n",
-    "    # visualize predicted boxes and target boxes\n",
-    "    visualize_prediction_and_target(id, target_boxes, predicted_boxes)\n",
-    "\n",
-    "# calculate iou accross all results\n",
-    "iou = sum(iou_list) / len(iou_list)\n",
-    "print(iou)"
+    "evaluate_visualize_results()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
