--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,17 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# from https://gist.github.com/AruniRC/c629c2df0e68e23aff7dcaeef87c72d4\n",
     "\n",
     "def bbox_iou(boxA, boxB):\n",
     "  # https://www.pyimagesearch.com/2016/11/07/intersection-over-union-iou-for-object-detection/\n",
-    "  # ^^ corrected.\n",
-    "    \n",
+    "\n",
     "  # Determine the (x, y)-coordinates of the intersection rectangle\n",
     "  xA = max(boxA[0], boxB[0])\n",
     "  yA = max(boxA[1], boxB[1])\n",
@@ -143,102 +141,40 @@
     "\n",
     "  # Correction: reject non-overlapping boxes\n",
     "  if interW <=0 or interH <=0 :\n",
-    "    return -1.0\n",
+    "    return 0#-1.0\n",
     "\n",
     "  interArea = interW * interH\n",
     "  boxAArea = (boxA[2] - boxA[0] + 1) * (boxA[3] - boxA[1] + 1)\n",
     "  boxBArea = (boxB[2] - boxB[0] + 1) * (boxB[3] - boxB[1] + 1)\n",
     "  iou = interArea / float(boxAArea + boxBArea - interArea)\n",
-    "  return iou\n",
-    "\n",
-    "\n",
-    "\n",
-    "def match_bboxes(bbox_gt, bbox_pred, IOU_THRESH=0.5):\n",
-    "    '''\n",
-    "    Given sets of true and predicted bounding-boxes,\n",
-    "    determine the best possible match.\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    bbox_gt, bbox_pred : N1x4 and N2x4 np array of bboxes [x1,y1,x2,y2]. \n",
-    "      The number of bboxes, N1 and N2, need not be the same.\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    (idxs_true, idxs_pred, ious, labels)\n",
-    "        idxs_true, idxs_pred : indices into gt and pred for matches\n",
-    "        ious : corresponding IOU value of each match\n",
-    "        labels: vector of 0/1 values for the list of detections\n",
-    "    '''\n",
-    "    n_true = bbox_gt.shape[0]\n",
-    "    n_pred = bbox_pred.shape[0]\n",
-    "    MAX_DIST = 1.0\n",
-    "    MIN_IOU = 0.0\n",
-    "\n",
-    "    # NUM_GT x NUM_PRED\n",
-    "    iou_matrix = np.zeros((n_true, n_pred))\n",
-    "    for i in range(n_true):\n",
-    "        for j in range(n_pred):\n",
-    "            iou_matrix[i, j] = bbox_iou(bbox_gt[i,:], bbox_pred[j,:])\n",
-    "\n",
-    "    if n_pred > n_true:\n",
-    "      # there are more predictions than ground-truth - add dummy rows\n",
-    "      diff = n_pred - n_true\n",
-    "      iou_matrix = np.concatenate( (iou_matrix, \n",
-    "                                    np.full((diff, n_pred), MIN_IOU)), \n",
-    "                                  axis=0)\n",
-    "\n",
-    "    if n_true > n_pred:\n",
-    "      # more ground-truth than predictions - add dummy columns\n",
-    "      diff = n_true - n_pred\n",
-    "      iou_matrix = np.concatenate( (iou_matrix, \n",
-    "                                    np.full((n_true, diff), MIN_IOU)), \n",
-    "                                  axis=1)\n",
-    "\n",
-    "    # call the Hungarian matching\n",
-    "    idxs_true, idxs_pred = scipy.optimize.linear_sum_assignment(1 - iou_matrix)\n",
-    "\n",
-    "    if (not idxs_true.size) or (not idxs_pred.size):\n",
-    "        ious = np.array([])\n",
-    "    else:\n",
-    "        ious = iou_matrix[idxs_true, idxs_pred]\n",
-    "\n",
-    "    # remove dummy assignments\n",
-    "    sel_pred = idxs_pred<n_pred\n",
-    "    idx_pred_actual = idxs_pred[sel_pred] \n",
-    "    idx_gt_actual = idxs_true[sel_pred]\n",
-    "    ious_actual = iou_matrix[idx_gt_actual, idx_pred_actual]\n",
-    "    sel_valid = (ious_actual > IOU_THRESH)\n",
-    "    label = sel_valid.astype(int)\n",
-    "\n",
-    "    return idx_gt_actual[sel_valid], idx_pred_actual[sel_valid], ious_actual[sel_valid], label "
+    "  return iou"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.75"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "boxa = np.array([1,2,3,4])\n",
-    "boxb = np.array([1,1,3,4])\n",
-    "\n",
-    "bbox_iou(boxa, boxb)"
+    "# match multiple boxes\n",
+    "def match_multiple_boxes(boxes_target, boxes_predicted):\n",
+    "    total_iou = 0\n",
+    "    for i in range(len(boxes_target)):\n",
+    "        max_iou = 0\n",
+    "        for j in range(len(boxes_predicted)):\n",
+    "            try: \n",
+    "                curr_iou = bbox_iou(boxes_target[i], boxes_predicted[j])\n",
+    "                if curr_iou > max_iou:\n",
+    "                    max_iou = curr_iou\n",
+    "            except IndexError:\n",
+    "                pass\n",
+    "        total_iou += max_iou\n",
+    "    return total_iou/max(len(boxes_target), len(boxes_predicted))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,28 +193,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "boxes = pd.read_csv(\"rescaled_data.csv\")\n",
     "boxes = boxes[[\"number\", \"xmin_scaled\", \"ymin_scaled\", \"xmax_scaled\", \"ymax_scaled\"]]\n",
-    "test_data = generate_data(image_list, boxes, \"./data/rescaled_png_files/\")"
+    "test_data = generate_data(image_list, boxes, \"./data/rescaled_png_files/\")\n",
+    "test_data = test_data[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_dataset = MarginaliaDataset(test_data)\n",
-    "val_dl = DataLoader(test_dataset, batch_size=1, collate_fn=collate_fn, pin_memory = True)\n"
+    "val_dl = DataLoader(test_dataset, batch_size=1, collate_fn=collate_fn, pin_memory = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +224,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +253,6 @@
     "detection_threshold = 0.1 # the lower, the less we keep\n",
     "model.eval()\n",
     "model.to(device)\n",
-    "\n",
     "for images, targets, id in val_dl:    \n",
     "\n",
     "    images = list(image.to(device) for image in images)\n",
@@ -340,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,8 +371,9 @@
     "            pass\n",
     "\n",
     "        # evaluate predicted_boxes vs target_boxes\n",
-    "        idxs_true, idxs_pred, ious, labels = match_bboxes(predicted_boxes, target_boxes)\n",
-    "        iou_mean = ious.mean()\n",
+    "        # idxs_true, idxs_pred, ious, labels = match_bboxes(predicted_boxes, target_boxes)\n",
+    "        # iou_mean = ious.mean()\n",
+    "        iou_mean = match_multiple_boxes(predicted_boxes, target_boxes) # TODO: Which evaluation function?\n",
     "        iou_list.append(iou_mean)\n",
     "\n",
     "        # visualize predicted boxes and target boxes\n",
@@ -444,21 +381,21 @@
     "\n",
     "    # calculate iou accross all results\n",
     "    iou = sum(iou_list) / len(iou_list)\n",
-    "    return iou"
+    "    return iou.item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.900658767024676"
+       "0.773455023765564"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
